
FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
FIND_PACKAGE(NumPy REQUIRED)


INCLUDE(${SWIG_USE_FILE})
SET(CMAKE_SWIG_FLAGS "")

# huge file is generated!
IF (PYPLASM_WINDOWS)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
ENDIF()


INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${NUMPY_INCLUDE_DIRS})
SET_SOURCE_FILES_PROPERTIES(xge.i PROPERTIES CPLUSPLUS ON)

# important -extranative (which define SWIG_PYTHON_EXTRA_NATIVE_CONTAINERS see http://old.nabble.com/Re%3A-std_vector-and-typemaps-p32605911.html)  
SET_SOURCE_FILES_PROPERTIES(xge.i PROPERTIES SWIG_FLAGS "-threads;-extranative")

SWIG_ADD_MODULE(xgepy python xge.i)
SWIG_LINK_LIBRARIES(xgepy ${PYTHON_LIBRARIES} xge)
ADD_DEPENDENCIES(_xgepy xge)


##########################################################
# Generate the Makefile to install the module
##########################################################

MESSAGE("-- Found python executable: "${PYTHON_EXECUTABLE})

# *** PYTHON_SITE_PACKAGES_DIR ***
EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} -c 
  "from distutils.sysconfig import get_python_lib; print get_python_lib()" 
  OUTPUT_VARIABLE PYTHON_SUGGESTED_SITE_PACKAGES_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
SET(PYTHON_SITE_PACKAGES_DIR ${PYTHON_SUGGESTED_SITE_PACKAGES_DIR} CACHE STRING "PYTHON_SITE_PACKAGES_DIR")
  
# *** PYTHON_PYD_DIR (where to copy the shared library) ***
if (PYPLASM_WINDOWS)
  GET_FILENAME_COMPONENT(PYTHON_DIR ${PYTHON_EXECUTABLE} PATH)
  SET(PYTHON_SUGGESTED_PYD_DIR ${PYTHON_DIR}/DLLs)
ELSE()
  SET(PYTHON_SUGGESTED_PYD_DIR ${PYTHON_SITE_PACKAGES_DIR}/pyplasm)
ENDIF()
SET(PYTHON_PYD_DIR ${PYTHON_SUGGESTED_PYD_DIR} CACHE STRING "PYTHON_PYD_DIR")


SET(SWIG_GENERATED_PY_FILE  "${CMAKE_CURRENT_BINARY_DIR}/xgepy.py"             CACHE STRING "PYTHON_XGE_PY_FILE")

if (PYPLASM_WINDOWS)
  SET(SWIG_GENERATED_PYD_FILE "${CMAKE_CURRENT_BINARY_DIR}/Release/_xgepy.pyd"  CACHE STRING "PYTHON_XGE_PYD_FILE")
ELIF (PYPLASM_APPLE)
  SET(SWIG_GENERATED_PYD_FILE "${CMAKE_CURRENT_BINARY_DIR}/_xgepy.dynlib"  CACHE STRING "PYTHON_XGE_PYD_FILE")
ELSE()
  SET(SWIG_GENERATED_PYD_FILE "${CMAKE_CURRENT_BINARY_DIR}/_xgepy.so" CACHE STRING "PYTHON_XGE_PYD_FILE")
ENDIF()



CONFIGURE_FILE(Makefile.install.in Makefile.install)

